--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -15,9 +15,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: "3.x"
+
+      - name: Install dependencies
+        run: pip install pytest
 
       - name: Run test
         run: python -m pytest day1/test_hello.py
