--- a/.github/test_matrix.yaml
+++ b/.github/test_matrix.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup python ${{matrix.python-version}}
         uses: actions/setup-python@v4
         with:
-          python-version: $(matrix.python-version)
+          python-version: ${{matrix.python-version}}
 
       - name: Install dependencies
         run: pip install pytest
