update path in packaging step

--- a/.github/workflows/day3_workflow.yaml
+++ b/.github/workflows/day3_workflow.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: "Packaging artifacts"
         run: |
           mkdir -p dist
-          zip dist/my_app.zip *.py
+          zip dist/my_app.zip day3/*.py
 
       - name: "Uploading artifacts"
         if: ${{success()}}
