--- a/day2/.github/workflows/test_matrix.yaml
+++ b/day2/.github/workflows/test_matrix.yaml
@@ -32,7 +32,7 @@ jobs:
         run: pip install pytest
 
       - name: Run tests
-        run: python -m pytest day1/test_hello.py
+        run: python -m pytest tests/test_greeting.py
 
       - name: Print Greetings
         run: echo ${{env.GREETING}}
