updates action.yml and staged_ci.yml

--- a/.github/actions/setup-python-environment/action.yml
+++ b/.github/actions/setup-python-environment/action.yml
@@ -8,11 +8,15 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: actions/checkout@v3
     - uses: actions/setup-python@v5
       with:
-        python-version: ${{inputs.python-version}}
+        python-version: ${{ inputs.python-version }}
         cache: "pip"
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: |
+        if [ -f requirements.txt ]; then
+          pip install -r requirements.txt
+        else
+          echo "No requirements.txt found, skipping install."
+        fi
       shell: bash
