--- a/day4/.github/workflows/staged_ci.yaml
+++ b/day4/.github/workflows/staged_ci.yaml
@@ -12,14 +12,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup-python-environment
         with:
           python-version: "3.11"
       - name: Install flake8
         run: pip install flake8
       - name: Linting with flake8
-        run: flake8 day4/app
+        run: flake8 scripts/
+        continue-on-error: false
 
   test:
     runs-on: ubuntu-latest
@@ -31,19 +32,12 @@ jobs:
         python-version: ["3.8", "3.12"]
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup-python-environment
         with:
           python-version: ${{matrix.python-version}}
-      - name: Install dependencies
-        run: pip install -r day4/requirements.txt
       - name: Testing Code
-        run: pytest day4/tests/ > logs/test_output.txt
-      - name: Upload test logs
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-log-py-${{matrix.python-version}}
-          path: logs/test_output.txt
+        run: pytest tests/
 
   build:
     runs-on: ubuntu-latest
@@ -51,12 +45,10 @@ jobs:
     if: ${{ success() }}
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup-python-environment
         with:
           python-version: "3.11"
-      - name: Install dependencies
-        run: pip install -r requirements.txt
       - name: "Packaging artifacts"
         run: |
           mkdir -p dist
@@ -69,15 +61,13 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: build
-    if: ${{ always() && success() && github.ref == 'refs/heads/main' }}
+    if: ${{ success() }}
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup-python-environment
         with:
           python-version: "3.11"
-      - name: Install dependencies
-        run: pip install -r requirements.txt
       - name: "Download artifacts"
         uses: actions/download-artifact@v4
         with:
